# wgpu-renderer

./: .gitignore  Cargo.toml  build.sh  bun.lockb  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: entrypoints.rs  error.compute.wgsl  error.compute2.wgsl  index.html  index.ts  lib.rs  model.rs  reset.css  shader.wgsl  styles.css  texture.rs  util.rs
src/assets/: no_bg_128.ts  simple.json  test.json  test2.ts  test3.ts  test4.ts  test5.ts  test6.ts  test7.ts  test8.json  white_bg_128.ts
src/assets/wasm/: renderer.d.ts  renderer.js  renderer_bg.wasm  renderer_bg.wasm.d.ts
src/model/: color.rs  drawing.rs  point.rs  polygon.rs  settings.rs
