[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-intrusive = "0.5.0"
js-sys = "0.3.64"
log = "0.4.20"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "console", "ImageData", "OffscreenCanvas", "HtmlImageElement"] }
wgpu = { version = "0.17.0" }
