[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-intrusive = "0.5.0"
getrandom = { version = "0.2.10", features = ["js"] }
image = "0.24.7"
js-sys = "0.3.64"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-timer = "0.2.5"
web-sys = { version = "0.3.64", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "console", "ImageData", "OffscreenCanvas", "HtmlImageElement"] }
wgpu = { version = "0.17.0" }
